# Nesium

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  clear_cache.ps1  config.toml.example  setup-sdl2.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  build_rust.ps1  build_rust.sh  gradlew  local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/nesium/: AppLogger.kt  MainActivity.kt  NesiumCore.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
nesium-android/: Cargo.toml
nesium-android/src/: lib.rs
resources/: README.md
src/: apu.rs  artwork_scraper.rs  cartridge.rs  config.rs  cpu.rs  emulator.rs  input.rs  lib.rs  main.rs  memory.rs  ppu.rs  renderer.rs  rom_browser.rs  trace.rs
src/ui/: app.rs  audio.rs  launcher.rs  mod.rs  settings.rs
